Get internship by id - mini fixed №2